--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<div>
 		<h1>The Cheese Shrine</h1>
 		<p>This is description of the website.</p>
-		<img src="" alt="">
-		<p>This is the image description</p>
-		<img src="" alt="">
-		<p>This is the image description</p>
-		<img src="" alt="">
-		<p>This is the image description</p>
+		<img src="cheddar.jpeg" alt="">
+		<p>Cheddar</p>
+		<img src="brie.jpeg" alt="">
+		<p>Brie</p>
+		<img src="mozzarella.jpeg" alt="">
+		<p>Mozzarella</p>
 	</div>
 </body>
 </html>
