--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<div>
 		<h1>The Cheese Shrine</h1>
 		<p>This is description of the website.</p>
-		<img src="cheddar.jpeg" alt="">
+		<img src="cheddar.jpg" alt="">
 		<p>Cheddar</p>
-		<img src="brie.jpeg" alt="">
+		<img src="brie.jpg" alt="">
 		<p>Brie</p>
-		<img src="mozzarella.jpeg" alt="">
+		<img src="mozzarella.jpg" alt="">
 		<p>Mozzarella</p>
 	</div>
 </body>
