Adding images and structure

--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div>
+	<div id="main">
 		<h1>The Cheese Shrine</h1>
-		<p>This is description of the website.</p>
-		<img src="cheddar.jpg" alt="">
-		<p>Cheddar</p>
-		<img src="brie.jpg" alt="">
-		<p>Brie</p>
-		<img src="mozzarella.jpg" alt="">
-		<p>Mozzarella</p>
+		<p>Get to know my favorite kinds of cheese.</p>
+		<div class="article1">
+			<img src="cheddar.jpg" alt="">
+			<p>Cheddar</p>
+		</div>
+		<div class="article2">
+			<img src="brie.jpg" alt="">
+			<p>Brie</p>
+		</div>
+		<div class="article3">
+			<img src="mozzarella.jpg" alt="">
+			<p>Mozzarella</p>
+		</div>
 	</div>
 </body>
 </html>
