Styling section and articles

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 	<div id="main">
 		<h1>The Cheese Shrine</h1>
 		<p>Get to know my favorite kinds of cheese.</p>
-		<div class="article1">
-			<img src="cheddar.jpg" alt="">
-			<p>Cheddar</p>
-		</div>
-		<div class="article2">
-			<img src="brie.jpg" alt="">
-			<p>Brie</p>
-		</div>
-		<div class="article3">
-			<img src="mozzarella.jpg" alt="">
-			<p>Mozzarella</p>
-		</div>
+		<section>
+			<div class="article1">
+				<img src="cheddar.jpg" alt="">
+				<p>Cheddar</p>
+			</div>
+			<div class="article2">
+				<img src="brie.jpg" alt="">
+				<p>Brie</p>
+			</div>
+			<div class="article3">
+				<img src="mozzarella.jpg" alt="">
+				<p>Mozzarella</p>
+			</div>
+		</section>
 	</div>
 </body>
 </html>
