Changing layout to inline view

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="main">
 		<h1>The Cheese Shrine</h1>
-		<p>Get to know my favorite kinds of cheese.</p>
+		<p class="tagline">Get to know my favorite kinds of cheese.</p>
 		<section>
 			<div class="article1">
 				<img src="cheddar.jpg" alt="">
