--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 		<h1>The Cheese Shrine</h1>
 		<p class="tagline">Get to know my favorite kinds of cheese.</p>
 		<section>
-			<div class="article1">
+			<div class="article">
 				<img src="cheddar.jpg" alt="">
 				<p>Cheddar</p>
 			</div>
-			<div class="article2">
+			<div class="article">
 				<img src="brie.jpg" alt="">
 				<p>Brie</p>
 			</div>
-			<div class="article3">
+			<div class="article">
 				<img src="mozzarella.jpg" alt="">
 				<p>Mozzarella</p>
 			</div>
