Adding links, descriptions and analytics

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>cheese.com - Home</title>
+	<title>My favorite cheeses - Home</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,18 +11,38 @@
 		<p class="tagline">Get to know my favorite kinds of cheese.</p>
 		<section>
 			<div class="article">
-				<img src="cheddar.jpg" alt="">
-				<p>Cheddar</p>
+				<a href="https://www.tillamook.com/cheese.html" target="_blank">
+					<img src="cheddar.jpg" alt="">
+				</a>
+				<h2>Cheddar Cheese</h2>
+				<p>Cheddar cheese is a relatively hard, off-white, sometimes sharp-tasting, natural cheese. <br> Originating in the English village of Cheddar in Somerset, cheeses of this style are now produced beyond the region and in several countries around the world.</p>
 			</div>
 			<div class="article">
-				<img src="brie.jpg" alt="">
-				<p>Brie</p>
+				<a href="https://presidentcheese.com/products/brie-cheese/president-brie-round/" target="_blank">
+					<img src="brie.jpg" alt="">
+				</a>
+				<h2>Brie</h2>
+				<p>Brie is a soft cow's-milk cheese named after Brie, the French region from which it originated. <br>It is pale in color with a slight grayish tinge under a rind of white mould. The rind is typically eaten, with its flavor depending largely upon the ingredients used and its manufacturing environment.</p>
 			</div>
 			<div class="article">
-				<img src="mozzarella.jpg" alt="">
-				<p>Mozzarella</p>
+				<a href="https://www.sargento.com/our-cheese/shredded-cheese/shredded-italian/sargento-shredded-mozzarella-natural-cheese-traditional-cut" target="_blank">
+					<img src="mozzarella.jpg" alt="">
+				</a>
+				<h2>Mozzarella</h2>
+				<p>Mozzarella is a traditionally southern Italian cheese made from Italian buffalo's milk by the pasta filata method. <br>Mozzarella received a Traditional Specialities Guaranteed certification from the European Union in 1998.</p>
 			</div>
 		</section>
 	</div>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161786286-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161786286-1');
+</script>
 </body>
 </html>
+
+
